--- a/styles/room.css
+++ b/styles/room.css
@@ -181,6 +181,19 @@
   display: none;
 }
 
+#stream__box .video__container{
+  border: 2px solid #000;
+  border-radius: 0;
+  height: 100%!important;
+  width: 100%!important;
+
+  background-size: 300px;
+}
+
+#stream__box video{
+  border-radius: 0;
+}
+
 #streams__container {
   display: flex;
   flex-wrap: wrap;
@@ -200,6 +213,10 @@
   overflow: hidden;
   height: 300px;
   width: 300px;
+  background-image: url('../images/5.png');
+  background-repeat: no-repeat;
+  background-position:center;
+  background-size: 75%;
 }
 
 .video-player{
